Updated server.js code

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGO_URI=mongodb+srv://sana:sana3098@cluster0.g0fpf.mongodb.net/writings?retryW
 
 EMAIL=sanawaqar4560@gmail.com
 PASSWORD=mcdzbgrhxvzttrch
+PORT=8000
